Podio mejorado (Colores)

--- a/app/src/main/res/layout/activity_records.xml
+++ b/app/src/main/res/layout/activity_records.xml
@@ -22,12 +22,14 @@
 
     <TextView
         android:id="@+id/textView7"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="#00FFFFFF"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:background="#E241C4E4"
+        android:fontFamily="sans-serif-condensed"
+        android:gravity="center"
         android:text="Pasaportes TOP 3"
         android:textColor="#000000"
-        android:textSize="24sp"
+        android:textSize="34sp"
         app:layout_constraintBottom_toTopOf="@+id/guideline62"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -49,12 +51,14 @@
 
     <TextView
         android:id="@+id/textView8"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="#00FFFFFF"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:background="#E241C4E4"
+        android:fontFamily="sans-serif-condensed"
+        android:gravity="center"
         android:text="Facturación TOP 3"
         android:textColor="#000000"
-        android:textSize="24sp"
+        android:textSize="34sp"
         app:layout_constraintBottom_toTopOf="@+id/guideline64"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -110,180 +114,252 @@
         app:layout_constraintGuide_percent="0.87" />
 
     <TextView
-        android:id="@+id/textView9"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="TextView"
+        android:id="@+id/tvPNombre1"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:background="#EABE3F"
+        android:fontFamily="sans-serif-condensed"
+        android:gravity="center"
+        android:textColor="#000000"
+        android:textSize="16sp"
         app:layout_constraintBottom_toTopOf="@+id/guideline67"
         app:layout_constraintEnd_toStartOf="@+id/guideline65"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/guideline62" />
 
     <TextView
-        android:id="@+id/textView10"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="TextView"
+        android:id="@+id/tvPPuntuacion1"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:background="#EABE3F"
+        android:fontFamily="sans-serif-condensed"
+        android:gravity="center"
+        android:textColor="#000000"
+        android:textSize="16sp"
         app:layout_constraintBottom_toTopOf="@+id/guideline67"
         app:layout_constraintEnd_toStartOf="@+id/guideline66"
         app:layout_constraintStart_toStartOf="@+id/guideline65"
         app:layout_constraintTop_toTopOf="@+id/guideline62" />
 
     <TextView
-        android:id="@+id/textView11"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="TextView"
+        android:id="@+id/tvPCombo1"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:background="#EABE3F"
+        android:fontFamily="sans-serif-condensed"
+        android:gravity="center"
+        android:textColor="#000000"
+        android:textSize="16sp"
         app:layout_constraintBottom_toTopOf="@+id/guideline67"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/guideline66"
         app:layout_constraintTop_toTopOf="@+id/guideline62" />
 
     <TextView
-        android:id="@+id/textView12"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="TextView"
+        android:id="@+id/tvPNombre2"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:background="#C0C0C0"
+        android:fontFamily="sans-serif-condensed"
+        android:gravity="center"
+        android:textColor="#000000"
+        android:textSize="16sp"
         app:layout_constraintBottom_toTopOf="@+id/guideline68"
         app:layout_constraintEnd_toStartOf="@+id/guideline65"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/guideline67" />
 
     <TextView
-        android:id="@+id/textView13"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="TextView"
+        android:id="@+id/tvPPuntuacion2"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:background="#C0C0C0"
+        android:fontFamily="sans-serif-condensed"
+        android:gravity="center"
+        android:textColor="#000000"
+        android:textSize="16sp"
         app:layout_constraintBottom_toTopOf="@+id/guideline68"
         app:layout_constraintEnd_toStartOf="@+id/guideline66"
         app:layout_constraintStart_toStartOf="@+id/guideline65"
         app:layout_constraintTop_toTopOf="@+id/guideline67" />
 
     <TextView
-        android:id="@+id/textView14"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="TextView"
+        android:id="@+id/tvPCombo2"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:background="#C0C0C0"
+        android:fontFamily="sans-serif-condensed"
+        android:gravity="center"
+        android:textColor="#000000"
+        android:textSize="16sp"
         app:layout_constraintBottom_toTopOf="@+id/guideline68"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/guideline66"
         app:layout_constraintTop_toTopOf="@+id/guideline67" />
 
     <TextView
-        android:id="@+id/textView15"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="TextView"
+        android:id="@+id/tvPNombre3"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:background="#A59271"
+        android:fontFamily="sans-serif-condensed"
+        android:gravity="center"
+        android:textColor="#000000"
+        android:textSize="16sp"
         app:layout_constraintBottom_toTopOf="@+id/guideline63"
         app:layout_constraintEnd_toStartOf="@+id/guideline65"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/guideline68" />
 
     <TextView
-        android:id="@+id/textView16"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="TextView"
+        android:id="@+id/tvPPuntuacion3"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:background="#A59271"
+        android:fontFamily="sans-serif-condensed"
+        android:gravity="center"
+        android:textColor="#000000"
+        android:textSize="16sp"
         app:layout_constraintBottom_toTopOf="@+id/guideline63"
         app:layout_constraintEnd_toStartOf="@+id/guideline66"
         app:layout_constraintStart_toStartOf="@+id/guideline65"
         app:layout_constraintTop_toTopOf="@+id/guideline68" />
 
     <TextView
-        android:id="@+id/textView17"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="TextView"
+        android:id="@+id/tvPCombo3"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:background="#A59271"
+        android:fontFamily="sans-serif-condensed"
+        android:gravity="center"
+        android:textColor="#000000"
+        android:textSize="16sp"
         app:layout_constraintBottom_toTopOf="@+id/guideline63"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/guideline66"
         app:layout_constraintTop_toTopOf="@+id/guideline68" />
 
     <TextView
-        android:id="@+id/textView18"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="TextView"
+        android:id="@+id/tvFNombre1"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:background="#EABE3F"
+        android:fontFamily="sans-serif-condensed"
+        android:gravity="center"
+        android:textColor="#000000"
+        android:textSize="16sp"
         app:layout_constraintBottom_toTopOf="@+id/guideline69"
         app:layout_constraintEnd_toStartOf="@+id/guideline65"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/guideline64" />
 
     <TextView
-        android:id="@+id/textView19"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="TextView"
+        android:id="@+id/tvFPuntuacion1"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:background="#EABE3F"
+        android:fontFamily="sans-serif-condensed"
+        android:gravity="center"
+        android:textColor="#000000"
+        android:textSize="16sp"
         app:layout_constraintBottom_toTopOf="@+id/guideline69"
         app:layout_constraintEnd_toStartOf="@+id/guideline66"
         app:layout_constraintStart_toStartOf="@+id/guideline65"
         app:layout_constraintTop_toTopOf="@+id/guideline64" />
 
     <TextView
-        android:id="@+id/textView20"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="TextView"
+        android:id="@+id/tvFCombo1"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:background="#EABE3F"
+        android:fontFamily="sans-serif-condensed"
+        android:gravity="center"
+        android:textColor="#000000"
+        android:textSize="16sp"
         app:layout_constraintBottom_toTopOf="@+id/guideline69"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/guideline66"
         app:layout_constraintTop_toTopOf="@+id/guideline64" />
 
     <TextView
-        android:id="@+id/textView21"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="TextView"
+        android:id="@+id/tvFNombre2"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:background="#C0C0C0"
+        android:fontFamily="sans-serif-condensed"
+        android:gravity="center"
+        android:textColor="#000000"
+        android:textSize="16sp"
         app:layout_constraintBottom_toTopOf="@+id/guideline70"
         app:layout_constraintEnd_toStartOf="@+id/guideline65"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/guideline69" />
 
     <TextView
-        android:id="@+id/textView22"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="TextView"
+        android:id="@+id/tvFPuntuacion2"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:background="#C0C0C0"
+        android:fontFamily="sans-serif-condensed"
+        android:gravity="center"
+        android:textColor="#000000"
+        android:textSize="16sp"
         app:layout_constraintBottom_toTopOf="@+id/guideline70"
         app:layout_constraintEnd_toStartOf="@+id/guideline66"
         app:layout_constraintStart_toStartOf="@+id/guideline65"
         app:layout_constraintTop_toTopOf="@+id/guideline69" />
 
     <TextView
-        android:id="@+id/textView23"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="TextView"
+        android:id="@+id/tvFCombo2"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:background="#C0C0C0"
+        android:fontFamily="sans-serif-condensed"
+        android:gravity="center"
+        android:textColor="#000000"
+        android:textSize="16sp"
         app:layout_constraintBottom_toTopOf="@+id/guideline70"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/guideline66"
         app:layout_constraintTop_toTopOf="@+id/guideline69" />
 
     <TextView
-        android:id="@+id/textView24"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="TextView"
+        android:id="@+id/tvFNombre3"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:background="#A59271"
+        android:fontFamily="sans-serif-condensed"
+        android:gravity="center"
+        android:textColor="#000000"
+        android:textSize="16sp"
         app:layout_constraintBottom_toTopOf="@+id/guideline71"
         app:layout_constraintEnd_toStartOf="@+id/guideline65"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/guideline70" />
 
     <TextView
-        android:id="@+id/textView25"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="TextView"
+        android:id="@+id/tvFPuntuacion3"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:background="#A59271"
+        android:fontFamily="sans-serif-condensed"
+        android:gravity="center"
+        android:textColor="#000000"
+        android:textSize="16sp"
         app:layout_constraintBottom_toTopOf="@+id/guideline71"
         app:layout_constraintEnd_toStartOf="@+id/guideline66"
         app:layout_constraintStart_toStartOf="@+id/guideline65"
         app:layout_constraintTop_toTopOf="@+id/guideline70" />
 
     <TextView
-        android:id="@+id/textView26"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="TextView"
+        android:id="@+id/tvFCombo3"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:background="#A59271"
+        android:fontFamily="sans-serif-condensed"
+        android:gravity="center"
+        android:textColor="#000000"
+        android:textSize="16sp"
         app:layout_constraintBottom_toTopOf="@+id/guideline71"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/guideline66"
@@ -304,7 +380,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.88" />
+        app:layout_constraintGuide_percent="0.89" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline74"
@@ -324,6 +400,7 @@
         android:id="@+id/guideline76"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:background="#8C7853"
         android:orientation="vertical"
         app:layout_constraintGuide_percent="0.29" />
 
@@ -333,4 +410,5 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         app:layout_constraintGuide_percent="0.11" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
