--- a/app/src/main/res/layout/activity_opciones.xml
+++ b/app/src/main/res/layout/activity_opciones.xml
@@ -147,7 +147,7 @@
 
     <Switch
         android:id="@+id/swMusica"
-        android:layout_width="wrap_content"
+        android:layout_width="47dp"
         android:layout_height="0dp"
         android:checked="true"
         app:layout_constraintBottom_toTopOf="@+id/guideline51"
