--- a/app/src/main/res/layout/activity_opciones.xml
+++ b/app/src/main/res/layout/activity_opciones.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#00FFFFFF"
+    android:background="@drawable/fondoprincipal2"
     tools:context=".Opciones">
 
     <androidx.constraintlayout.widget.Guideline
@@ -37,6 +37,7 @@
         android:text="Cambiar duracion modo pasaportes (s)"
         android:textColor="#000000"
         android:textColorHint="#000000"
+        android:textSize="13sp"
         app:layout_constraintBottom_toTopOf="@+id/guideline44"
         app:layout_constraintEnd_toStartOf="@+id/guideline49"
         app:layout_constraintStart_toStartOf="parent"
